--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<input type="number" class="a" placeholder="a">
 	<input type="number" class="b" placeholder="b">
+	<button class="btn">btn</button>
 	<script src="main.js"></script>
 	</script>
 </body>
