--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 	<title>Document</title>
 </head>
 <body>
-	<input type="number" class="a" placeholder="a">
+	<!-- <input type="number" class="a" placeholder="a">
 	<input type="number" class="b" placeholder="b">
-	<button class="btn">btn</button>
+	<button class="btn">btn</button> -->
+	<input type="number" id="a" value="0" />
+	<input type="number" id="b" value="0" />
+
+	<p id="result"></p>
+
+	<button onclick="checkValue()">check</button>
 	<script src="main.js"></script>
-	</script>
+	<!-- </script> -->
 </body>
 </html>
