--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<p id="result"></p>
 
-	<button onclick="checkValue()">check</button>
+	<button onclick="check()">check</button>
 	<script src="main.js"></script>
 	<!-- </script> -->
 </body>
