--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<!-- <input type="number" class="a" placeholder="a">
 	<input type="number" class="b" placeholder="b">
 	<button class="btn">btn</button> -->
-	<input type="number" id="a" value="0" />
-	<input type="number" id="b" value="0" />
+	<input type="number" id="a" value="" />
+	<input type="number" id="b" value="" />
 
 	<p id="result"></p>
 
